k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fangorn
spec:
  type: ClusterIP
  selector:
    app: fangorn
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
